--- a/test/data/test1_sla.ipynb
+++ b/test/data/test1_sla.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -49,8 +49,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -102,12 +104,6 @@
        "      <td>1</td>\n",
        "      <td>2018-10-12 11:53:27</td>\n",
        "      <td>{\"asset_status\": [\"active\", \"deactive\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>814</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-10-12 11:05:41</td>\n",
-       "      <td>{\"alias\": [\"1\", \"2\"]}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>812</th>\n",
@@ -373,12 +369,6 @@
        "      <td>{\"asset_status\": [\"active\", \"deactive\"]}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>814</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2018-10-12 11:05:41</td>\n",
-       "      <td>{\"alias\": [\"1\", \"2\"]}</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>812</th>\n",
        "      <td>1</td>\n",
        "      <td>2018-10-12 10:11:01</td>\n",
@@ -593,7 +583,7 @@
        "</div>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,6 +591,7 @@
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "'''\n",
+    "a. 聚合main_activitystream_cmdb和main_activitystream，过滤时间，根据时间排序\n",
     "实现了以下sql的功能\n",
     "select * from main_activitystream_cmdb t1 inner join main_activitystream t2\n",
     "\ton t2.id = t1.activitystream_id\n",
@@ -608,10 +599,13 @@
     "\tand t2.\"timestamp\" > '2018-10-01 00:00:00'\n",
     "\tand t2.\"timestamp\" < '2018-10-31 23:59:59'\n",
     "\torder by t2.\"timestamp\" desc;\n",
+    "b. changes字段过滤出包含asset_status的数据\n",
     "'''\n",
-    "ndata[['cmdb_id', 'timestamp', 'changes']][(ndata['cmdb_id'] == 1) \n",
-    "      & (ndata['timestamp'] > '2018-10-01 00:00:00')\n",
-    "      & (ndata['timestamp'] < '2018-10-31 23:59:59')\n",
+    "df_b = ndata[['cmdb_id', 'timestamp', 'changes']][\n",
+    "    (ndata['cmdb_id'] == 1) \n",
+    "    & (ndata['timestamp'] > '2018-10-01 00:00:00')\n",
+    "    & (ndata['timestamp'] < '2018-10-31 23:59:59')\n",
+    "    & (ndata['changes'].str.contains('asset_status'))\n",
     "].sort_values(by='timestamp', ascending=False)"
    ]
   },
@@ -620,7 +614,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
