--- a/test/sla/test1_sla.ipynb
+++ b/test/sla/test1_sla.ipynb
@@ -51,7 +51,7 @@
    "cell_type": "code",
    "execution_count": 60,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
