--- a/pydata-book-1st-edition/ch02.ipynb
+++ b/pydata-book-1st-edition/ch02.ipynb
@@ -1281,6 +1281,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.10"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
